💄 styles: fix collapsed height of the cards before cards loading

--- a/src/components/dashboard/cards/cards.scss
+++ b/src/components/dashboard/cards/cards.scss
@@ -12,7 +12,6 @@ $maxCardWidth: 700px;
     justify-content: center;
     padding-top: $offsetBetweenCards;
     padding-right: $offsetBetweenCards;
-    background-color: #eeeff1;
 
     &-left,
     &-right {
