--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+html, body {
+    height: 100%;
+    background-color: #eeeff1;
+}
+
 body,
 button {
     margin: 0;
